feat: добавлен блок profile

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/pages.css">
 </head>
 <body class="page">
@@ -15,7 +16,15 @@
         <hr class="header__line">
     </header>
     <main>
-
+        <section class="profile container">
+            <img src="./images/Custo.jpg" alt="" class="profile__image">
+            <div class="profile__about">
+                <p class="profile__name">Жак-Ив Кусто</p>
+                <button class="profile__edit-button"></button>
+                <p class="profile__job">Исследователь океана</p>
+            </div>
+            <button class="profile__add-button"><img src="./images/Add Button.svg" alt=""></button>
+        </section>
     </main>
 </body>
 </html>
