--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
             </div>
             <button class="profile__add-button"><img src="./images/Add Button.svg" alt=""></button>
         </section>
+        <section class="places container">
+            <div class="places__place">
+                <img src="./images/photo1.jpg" alt="" class="places__image">
+                <h3 class="places__title">Байкал sad asd asd sadasd asd</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+            <div class="places__place">
+                <img src="./images/photo2.jpg" alt="" class="places__image">
+                <h3 class="places__title"sada>Петергоф</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+            <div class="places__place">
+                <img src="./images/photo3.jpg" alt="" class="places__image">
+                <h3 class="places__title">Красноярский край</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+            <div class="places__place">
+                <img src="./images/photo4.jpg" alt="" class="places__image">
+                <h3 class="places__title">Камчатка</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+            <div class="places__place">
+                <img src="./images/photo5.jpg" alt="" class="places__image">
+                <h3 class="places__title">Парк &#171;Таганай&#187;</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+            <div class="places__place">
+                <img src="./images/photo6.jpg" alt="" class="places__image">
+                <h3 class="places__title">Самара</h3>
+                <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
