feat: готов футер

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./pages/pages.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
     <header class="header container">
@@ -58,5 +58,8 @@
             </div>
         </section>
     </main>
+    <footer class="footer container">
+        <p class="footer__copyright">© 2020 OLP</p>
+    </footer>
 </body>
 </html>
