feat: попап готов

--- a/index.html
+++ b/index.html
@@ -61,5 +61,14 @@
     <footer class="footer container">
         <p class="footer__copyright">© 2020 OLP</p>
     </footer>
+    <div class="popup-edit">
+        <div class="popup-edit__window">
+            <h3 class="popup-edit__title">Редактировать профиль</h3>
+            <input type="text" class="popup-edit__name">
+            <input type="text" class="popup-edit__job">
+            <button class="popup-edit__save-button">Сохранить</button>
+            <button class="popup-edit__close-button"><img src="./images/Close Icon.svg" alt=""></button>
+        </div>
+    </div>
 </body>
 </html>
