feat: закрытие и сохранение попапа готово

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
             <button class="popup-edit__close-button"><img src="./images/Close Icon.svg" alt=""></button>
         </div>
     </div> 
-   
+   <script src="./scripts/popup-edit.js"></script>
 </body>
 </html>
