feat: добавлен класс для нажатия лайка

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
             <input type="text" class="popup-edit__name">
             <input type="text" class="popup-edit__job">
             <button class="popup-edit__save-button">Сохранить</button>
-            <button class="popup-edit__close-button"><img src="./images/Close Icon.svg" alt=""></button>
+            <button class="popup-edit__close-button"></button>
         </div>
     </div> 
    <script src="./scripts/popup-edit.js"></script>
+   <script src="./scripts/like-active.js"></script>
 </body>
 </html>
