--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto Russia</title>
+    <link rel="icon" href="./images/olp.png">
     <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
 </head>
@@ -23,7 +24,7 @@
                 <button class="profile__edit-button"></button>
                 <p class="profile__job">Исследователь океана</p>
             </div>
-            <button class="profile__add-button"><img src="./images/Add Button.svg" alt=""></button>
+            <button class="profile__add-button"></button>
         </section>
         <section class="places container">
             <div class="places__place">
@@ -71,6 +72,5 @@
         </div>
     </div> 
    <script src="./scripts/popup-edit.js"></script>
-   <script src="./scripts/like-active.js"></script>
 </body>
 </html>
