--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="profile container">
-            <img src="./images/Custo.jpg" alt="" class="profile__image">
+            <img src="./images/Custo.jpg" alt="Жак-Ив Кусто" class="profile__image">
             <div class="profile__about">
                 <p class="profile__name">Жак-Ив Кусто</p>
                 <button class="profile__edit-button"></button>
@@ -28,32 +28,32 @@
         </section>
         <section class="places container">
             <div class="places__place">
-                <img src="./images/photo1.jpg" alt="" class="places__image">
-                <h3 class="places__title">Байкал sad asd asd sadasd asd</h3>
+                <img src="./images/photo1.jpg" alt="Байкал" class="places__image">
+                <h3 class="places__title">Байкал</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
-                <img src="./images/photo2.jpg" alt="" class="places__image">
+                <img src="./images/photo2.jpg" alt="Петергоф" class="places__image">
                 <h3 class="places__title"sada>Петергоф</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
-                <img src="./images/photo3.jpg" alt="" class="places__image">
+                <img src="./images/photo3.jpg" alt="Красноярский край" class="places__image">
                 <h3 class="places__title">Красноярский край</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
-                <img src="./images/photo4.jpg" alt="" class="places__image">
+                <img src="./images/photo4.jpg" alt="Камчатка" class="places__image">
                 <h3 class="places__title">Камчатка</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
-                <img src="./images/photo5.jpg" alt="" class="places__image">
+                <img src="./images/photo5.jpg" alt="Парк Таганай" class="places__image">
                 <h3 class="places__title">Парк &#171;Таганай&#187;</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
-                <img src="./images/photo6.jpg" alt="" class="places__image">
+                <img src="./images/photo6.jpg" alt="Самара" class="places__image">
                 <h3 class="places__title">Самара</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
