fixed after tests

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="places__place">
                 <img src="./images/photo2.jpg" alt="Петергоф" class="places__image">
-                <h3 class="places__title"sada>Петергоф</h3>
+                <h3 class="places__title">Петергоф</h3>
                 <button class="places__like-button"><img src="./images/Like.svg" alt=""></button>
             </div>
             <div class="places__place">
