--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <hr class="header__line">
     </header>
     <main>
-        <section class="profile container">
+        <section class="profile container" aria-label="профиль">
             <img src="./images/Custo.jpg" alt="Жак-Ив Кусто" class="profile__image">
             <div class="profile__about">
                 <p class="profile__name">Жак-Ив Кусто</p>
