fixed forms name

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <footer class="footer container">
         <p class="footer__copyright">© 2020 OLP</p>
     </footer>
-    <div name="popup-edit" class="popup-edit">
-        <form class="popup-edit__window">
+    <div class="popup-edit">
+        <form name="popup-edit-form" class="popup-edit__window">
             <h3 class="popup-edit__title">Редактировать профиль</h3>
             <input name="input_name" placeholder="Имя" type="text" class="popup-edit__input popup-edit__input_text_name">
             <input name="input_job" placeholder="Описание" type="text" class="popup-edit__input popup-edit__input_text_job">
