fixed: fixed forms name

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <div class="popup-edit">
         <div class="popup-edit__window">
             <h3 class="popup-edit__title">Редактировать профиль</h3>
-            <form name="popup-edit-form" class="popup-edit__form">
-                <input name="input_name" placeholder="Имя" type="text" class="popup-edit__input">
-                <input name="input_job" placeholder="Описание" type="text" class="popup-edit__input">
-                <button type="submit" class="popup-edit__save-button">Сохранить</button>
+            <form name="popup-edit-form" class="form">
+                <input name="input-name" placeholder="Имя" type="text" class="form__input">
+                <input name="input-job" placeholder="Описание" type="text" class="form__input">
+                <button type="submit" class="form__save-button">Сохранить</button>
             </form>
             <button type="button" class="popup-edit__close-button"></button>
         </div>
