--- a/index.html
+++ b/index.html
@@ -61,18 +61,40 @@
     <footer class="footer container">
         <p class="footer__copyright">© 2020 OLP</p>
     </footer>
-    <div class="popup-edit">
-        <div class="popup-edit__window">
-            <h3 class="popup-edit__title">Редактировать профиль</h3>
-            <form name="popup-edit-form" class="form">
+    <!-- Попап редактирования профиля -->
+    <div id="popup-edit" class="popup">
+        <div class="popup__window">
+            <h3 class="popup__title">Редактировать профиль</h3>
+            <form name="popup-form" class="form">
                 <input name="input-name" placeholder="Имя" type="text" class="form__input">
                 <input name="input-job" placeholder="Описание" type="text" class="form__input">
                 <button type="submit" class="form__save-button">Сохранить</button>
             </form>
-            <button type="button" class="popup-edit__close-button"></button>
+            <button type="button" class="popup__close-button"></button>
         </div>
     </div>
+    <!-- Попап добавления места -->
+    <div id="popup-add" class="popup">
+        <div class="popup__window">
+            <h3 class="popup__title">Новое место</h3>
+            <form name="popup-form" class="form">
+                <input name="input-place" placeholder="Название" type="text" class="form__input">
+                <input name="input-link" placeholder="Ссылка на картинку" type="text" class="form__input">
+                <button type="submit" class="form__save-button">Сохранить</button>
+            </form>
+            <button type="button" class="popup__close-button"></button>
+        </div>
+    </div>
+    <!-- Шаблон места -->
+    <template id="place-template">
+        <div class="places__place">
+            <img alt="фото добавленное пользователем" class="places__image">
+            <h3 class="places__title"></h3>
+            <button type="button" class="places__like-button"><img src="./images/Like.svg" alt="Лайк"></button>
+        </div>
+    </template>
     <script src="./scripts/popup-edit.js"></script>
+    <script src="./scripts/popup-add.js"></script>
 </body>
 
 </html>
