feat: buttons activated

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div class="places__place">
             <img alt="фото добавленное пользователем" class="places__image">
             <h3 class="places__title"></h3>
-            <button type="button" class="places__like-button"><img src="./images/Like.svg" alt="Лайк"></button>
+            <button type="button" class="places__like-button"></button>
+            <button type="button" class="places__delete-button"></button>
         </div>
     </template>
     <script src="./scripts/popup-edit.js"></script>
