--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
             <button type="button" class="popup__close-button"></button>
         </div>
     </div>
+    <!-- Попап увеличенной картинки -->
+    <div id="popup-image" class="popup popup_image">
+        <div class="popup__window popup__window_image">
+            <img src="" alt="" class="popup__image">
+            <h4 class="popup__title popup__title_image"></h4>
+            <button type="button" class="popup__close-button"></button>
+        </div>
+    </div>
     <!-- Шаблон места -->
     <template id="place-template">
         <div class="places__place">
