fixed: added alt for image

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Попап увеличенной картинки -->
     <div id="popup-image" class="popup popup_image">
         <div class="popup__window popup__window_image">
-            <img src="" alt="" class="popup__image">
+            <img src="" alt="Картинка пользователя" class="popup__image">
             <h4 class="popup__title popup__title_image"></h4>
             <button type="button" class="popup__close-button"></button>
         </div>
