fixed: added src for image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Шаблон места -->
     <template id="place-template">
         <div class="places__place">
-            <img alt="фото добавленное пользователем" class="places__image">
+            <img alt="фото добавленное пользователем" class="places__image" src="">
             <h3 class="places__title"></h3>
             <button type="button" class="places__like-button"></button>
             <button type="button" class="places__delete-button"></button>
