--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <button type="button" class="places__delete-button"></button>
         </div>
     </template>
-    <script src="./scripts/popup-edit.js"></script>
-    <script src="./scripts/popup-add.js"></script>
+    <script src="./scripts/cards.js"></script>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
