--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         <div class="popup__window">
             <h3 class="popup__title">Редактировать профиль</h3>
             <form name="popup-form" class="form">
-                <input name="input-name" placeholder="Имя" type="text" class="form__input">
-                <input name="input-job" placeholder="Описание" type="text" class="form__input">
+                <input name="input-name" placeholder="Имя" type="text" class="form__input" minlength="2" maxlength="40" required>
+                <span class="form__input-error input-name-error"></span>
+                <input name="input-job" placeholder="Описание" type="text" class="form__input" minlength="2" maxlength="200" required>
+                <span class="form__input-error input-job-error"></span>
                 <button type="submit" class="form__save-button">Сохранить</button>
             </form>
             <button type="button" class="popup__close-button"></button>
@@ -49,8 +51,10 @@
         <div class="popup__window">
             <h3 class="popup__title">Новое место</h3>
             <form name="popup-form" class="form">
-                <input name="input-place" placeholder="Название" type="text" class="form__input">
-                <input name="input-link" placeholder="Ссылка на картинку" type="text" class="form__input">
+                <input name="input-place" placeholder="Название" type="text" class="form__input" minlength="2" maxlength="30" required>
+                <span class="form__input-error input-place-error"></span>
+                <input name="input-link" placeholder="Ссылка на картинку" type="url" class="form__input" required>
+                <span class="form__input-error input-link-error"></span>
                 <button type="submit" class="form__save-button">Сохранить</button>
             </form>
             <button type="button" class="popup__close-button"></button>
@@ -77,6 +81,7 @@
     </template>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 
 </html>
