--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="form__input-error input-name-error"></span>
                 <input name="input-job" placeholder="Описание" type="text" class="form__input" minlength="2" maxlength="200" required>
                 <span class="form__input-error input-job-error"></span>
-                <button type="submit" class="form__save-button">Сохранить</button>
+                <button type="submit" class="form__save-button form__save-button_inactive">Сохранить</button>
             </form>
             <button type="button" class="popup__close-button"></button>
         </div>
@@ -55,7 +55,7 @@
                 <span class="form__input-error input-place-error"></span>
                 <input name="input-link" placeholder="Ссылка на картинку" type="url" class="form__input" required>
                 <span class="form__input-error input-link-error"></span>
-                <button type="submit" class="form__save-button">Сохранить</button>
+                <button type="submit" class="form__save-button form__save-button_inactive">Сохранить</button>
             </form>
             <button type="button" class="popup__close-button"></button>
         </div>
